Add solution of FSGM

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -553,15 +553,14 @@
         "    detached tensor: fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
         "    # Tip: Just calculate the loss and do a gradient ascent instead of a gradient descent.\n",
-        "    # (The solution uses the \"torch.gather\" function, but this is absolutely not necessary.)\n",
         "    ... \n",
         "    ...\n",
         "\n",
-        "\n",
-        "    # The following lines only show the type of what has to be returned and should be adapted\n",
+        "    # TODO: The following lines only show the type of what has to be returned and should be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
+        "    # We use detach to remove the gradient information from our outputs, \n",
         "    fake_imgs.detach_()\n",
-        "    noise_grads.detach()\n",
+        "    noise_grads.detach_()\n",
         "    return fake_imgs, noise_grads"
       ]
     },
@@ -645,32 +644,6 @@
         "Let's take a closer look at how we can actually train such patches. The general idea is very similar to FSGM in the sense that we calculate gradients for the input, and update our adversarial input correspondingly. However, there are also some differences in the setup. Firstly, we do not calculate a gradient for every pixel. Instead, we replace parts of the input image with our patch and then calculate the gradients just for our patch. Secondly, we don't just do it for one image, but we want the patch to work with any possible image. Hence, we have a whole training loop where we train the patch using SGD. Lastly, image patches are usually designed to make the model predict a specific class, not just any other arbitrary class except the true label. For instance, we can try to create a patch for the class \"toaster\" and train the patch so that our pretrained model predicts the class \"toaster\" for any image with the patch in it.\n",
         "\n",
         "Additionally, to the setup described above, there are a couple of design choices we can take. For instance, [Brown et al.](https://arxiv.org/pdf/1712.09665.pdf) randomly rotated and scaled the patch during training before placing it at a random position in an input image. This makes the patch more robust to small changes and is necessary if we want to fool a neural network in a real-world application. For simplicity, we will only focus on making the patch robust to the location in the image. Given a batch of input images and a patch, we can add the patch as follows:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oPVsI_3IM8Rf"
-      },
-      "outputs": [],
-      "source": [
-        "def place_patch(img, patch):\n",
-        "    for i in range(img.shape[0]):\n",
-        "        h_offset = np.random.randint(0,img.shape[2]-patch.shape[1]-1)\n",
-        "        w_offset = np.random.randint(0,img.shape[3]-patch.shape[2]-1)\n",
-        "        img[i,:,h_offset:h_offset+patch.shape[1],w_offset:w_offset+patch.shape[2]] = patch_forward(patch)\n",
-        "    return img"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c9Pwz6ndM8Rf"
-      },
-      "source": [
-        "The patch itself will be an `nn.Parameter` whose values are in the range between $-\\infty$ and $\\infty$. Images are, however, naturally limited in their range, and thus we write a small function that maps the parameter into the image value range of ImageNet:"
       ]
     },
     {
@@ -795,6 +768,49 @@
         "id": "B7fWDjd6M8Rg"
       },
       "source": [
+        "<details>\n",
+        "<summary>Solution (try to ask TAs instead of looking at it)</summary>\n",
+        "\n",
+        "```python\n",
+        "def patch_attack(model, target_class, patch_size=64, num_epochs=5):\n",
+        "    # Leave a small set of images out to check generalization\n",
+        "    # In most of our experiments, the performance on the hold-out data points\n",
+        "    # was as good as on the training set. Overfitting was little possible due\n",
+        "    # to the small size of the patches.\n",
+        "    train_set, val_set = torch.utils.data.random_split(dataset, [4500, 500])\n",
+        "    train_loader = data.DataLoader(train_set, batch_size=32, shuffle=True, drop_last=True, num_workers=8)\n",
+        "    val_loader = data.DataLoader(val_set, batch_size=32, shuffle=False, drop_last=False, num_workers=4)\n",
+        "    \n",
+        "    # Create parameter and optimizer\n",
+        "    if not isinstance(patch_size, tuple):\n",
+        "        patch_size = (patch_size, patch_size)\n",
+        "    patch = nn.Parameter(torch.zeros(3, patch_size[0], patch_size[1]), requires_grad=True)\n",
+        "    optimizer = torch.optim.SGD([patch], lr=1e-1, momentum=0.8)\n",
+        "    loss_module = nn.CrossEntropyLoss()\n",
+        "    \n",
+        "    # Training loop\n",
+        "    for epoch in tqdm(range(num_epochs)):\n",
+        "        t = tqdm(train_loader, leave=False)\n",
+        "        for img, _ in t:\n",
+        "            img = place_patch(img, patch)\n",
+        "            img = img.to(device)\n",
+        "            pred = model(img)\n",
+        "            labels = torch.zeros(img.shape[0], device=pred.device, dtype=torch.long).fill_(target_class)\n",
+        "            loss = loss_module(pred, labels)\n",
+        "            optimizer.zero_grad()\n",
+        "            loss.mean().backward()\n",
+        "            optimizer.step()\n",
+        "            t.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
+        "    \n",
+        "    # Final validation\n",
+        "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
+        "    \n",
+        "    return patch.data, {\"acc\": acc.item(), \"top5\": top5.item()}\n",
+        "```\n",
+        "\n",
+        "</details>\n",
+        "\n",
+        "\n",
         "To get some experience with what to expect from an adversarial patch attack, we want to train multiple patches for different classes. As the training of a patch can take one or two minutes on a GPU, we have provided a couple of pre-trained patches including their results on the full dataset. The results are saved in a JSON file, which is loaded below."
       ]
     },
@@ -821,16 +837,6 @@
         "                   for cname in patch_dict}\n",
         "    with open(os.path.join(CHECKPOINT_PATH, \"patch_results.json\"), \"w\") as f:\n",
         "        json.dump(result_dict, f, indent=4)"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RsQiBguxM8Rg"
-      },
-      "source": [
-        "Additionally, we implement a function to train and evaluate patches for a list of classes and patch sizes. The pretrained patches include the classes *toaster*, *goldfish*, *school bus*, *lipstick*, and *pineapple*. We chose the classes arbitrarily to cover multiple domains (animals, vehicles, fruits, devices, etc.). We trained each class for three different patch sizes: $32\\times32$ pixels, $48\\times48$ pixels, and $64\\times64$ pixels. We can load them in the two cells below."
       ]
     },
     {
