delete old optimizer

--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,15 +165,7 @@
         "id": "leD-0LteBNQ2",
         "outputId": "2e414a01-b7f1-4f48-93fd-07cdeb6e5d1f"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "y requires grad: True; z requires grad: False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from typing import Iterable, Union, Optional, List, Tuple\n",
         "import matplotlib.pyplot as plt\n",
@@ -848,7 +840,7 @@
         "\n",
         "SGD:\n",
         "- Below, read the method zero_grad. You can note that in PyTorch, to zero a gradient means assigning None.\n",
-        "- We will implement successively the pure SGD, the sgd with weight decay, and the SGD with momentum. Momentum, weight_decay, and update with learning rate must be modular operation.\n",
+        "- We will implement successively the pure SGD, the sgd with weight decay, and the SGD with momentum.\n",
         "\n",
         "Implement steps:\n",
         "1. `# update` Implement the most basic version of SGD possible\n",
