Otpim: make clearer what the exercices are

--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -221,7 +221,7 @@
         "\n",
         "In this exercise you will train a neural network to memorize a picture of your choice! Your network will implement a function from the $(x, y)$ coordinates of a pixel to three numbers $(R, G, B)$ representing the color of that pixel. Implement the `ImageMemorizer` network with three Linear layers and two ReLUs (generally, you don't want a ReLU after the last Linear layer). Test that your model matches the reference.\n",
         "\n",
-        "### The \"device\" variable\n",
+        "#### Note: The \"device\" variable\n",
         "\n",
         "A useful idiom when writing code to run on both CPU and GPU is to declare a `device` variable at the top of your notebook and then use it later on when creating or moving tensors. We've done this for you today.\n"
       ]
@@ -241,10 +241,13 @@
         "\n",
         "class ImageMemorizer(nn.Module):\n",
         "    def __init__(self, in_dim: int, hidden_dim: int, out_dim: int):\n",
-        "        pass\n",
+        "        # TODO: define the network's architecture. \n",
+        "        # Feel free to go back to the Pytorch basics' https://pytorch.org/tutorials/beginner/basics/intro.html\n",
+        "        ...\n",
         "\n",
         "    def forward(self, x: t.Tensor) -> t.Tensor:\n",
-        "        pass\n",
+        "        # TODO: implement the forward pass of the network\n",
+        "        ...\n",
         "\n",
         "\n",
         "if MAIN:\n",
