Adversarial attacks: use CPU for part 1, GPU for part 2

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -143,7 +143,6 @@
         "torch.backends.cudnn.benchmark = False\n",
         "\n",
         "# Fetching the device that will be used throughout this notebook\n",
-        "device = torch.device(\"cpu\") if not torch.cuda.is_available() else torch.device(\"cuda:0\")\n",
         "device = torch.device(\"cpu\") \n",
         "print(\"Using device\", device)"
       ]
@@ -210,7 +209,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Question: What is the difference between model.eval() and p.requires_grad = False in the next cell?"
+        "Question: What is the difference between `model.eval()` and `p.requires_grad = False` in the next cell?"
       ]
     },
     {
@@ -598,7 +597,10 @@
         "id": "GmRboOUsM8Re"
       },
       "source": [
-        "Despite the minor amount of noise, we are able to fool the network on all of our examples. None of the labels have made it into the top-5 for the four images, showing that we indeed fooled the model. We can also check the accuracy of the model on the adversarial images:"
+        "Despite the minor amount of noise (we change each pixel value by ±1), we are able to fool the network on most of our examples. In some, none of the labels have made it into the top-5, showing that we indeed fooled the model.\n",
+        "For those images where the model still predicts the correct label, we can increase the noise level $\\epsilon$ to make the attack stronger, however, if you increase it too much, the perturbation will become visible to humans.\n",
+        "\n",
+        "We can also check the accuracy of the model on the adversarial images:"
       ]
     },
     {
@@ -637,6 +639,25 @@
       "source": [
         "### Adversarial Patches (Bonus)\n",
         "\n",
+        "**Note**: you need a notebook with a GPU for this part, you can select one in Colab: Runtime -> Change run time type -> GPU."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "assert torch.cuda.is_available(), \"GPU device not found.\"\n",
+        "device = torch.device(\"cuda\")\n",
+        "# Moving the model to the GPU\n",
+        "pretrained_model = pretrained_model.to(device)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Instead of changing every pixel by a little bit, we can also try to change a small part of the image into whatever values we would like. In other words, we will create a small image patch that covers a minor part of the original image but causes the model to confidentially predict a specific class we choose. This form of attack is an even bigger threat in real-world applications than FSGM. Imagine a network in an autonomous car that receives a live image from a camera. Another driver could print out a specific pattern and put it on the back of his/her vehicle to make the autonomous car believe that the car is actually a pedestrian. Meanwhile, humans would not notice it. [Tom Brown et al.](https://arxiv.org/pdf/1712.09665.pdf) proposed a way of learning such adversarial image patches robustly in 2017 and provided a short demonstration on [YouTube](https://youtu.be/i1sp4X57TL4). Interestingly, if you add a small picture of the target class (here *toaster*) to the original image, the model does not pick it up at all. A specifically designed patch, however, which only roughly looks like a toaster, can change the network's prediction instantaneously.\n",
         "\n",
         "[![Adversarial patch in real world](https://img.youtube.com/vi/i1sp4X57TL4/0.jpg)](https://youtu.be/i1sp4X57TL4)\n",
@@ -759,6 +780,53 @@
         "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
         "    \n",
         "    return patch.data, {\"acc\": acc.item(), \"top5\": top5.item()}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<details>\n",
+        "<summary>Solution (try to ask TAs instead of looking at it)</summary>\n",
+        "\n",
+        "```python\n",
+        "def patch_attack(model, target_class, patch_size=64, num_epochs=5):\n",
+        "    # Leave a small set of images out to check generalization\n",
+        "    # In most of our experiments, the performance on the hold-out data points\n",
+        "    # was as good as on the training set. Overfitting was little possible due\n",
+        "    # to the small size of the patches.\n",
+        "    train_set, val_set = torch.utils.data.random_split(dataset, [4500, 500])\n",
+        "    train_loader = data.DataLoader(train_set, batch_size=32, shuffle=True, drop_last=True, num_workers=8)\n",
+        "    val_loader = data.DataLoader(val_set, batch_size=32, shuffle=False, drop_last=False, num_workers=4)\n",
+        "    \n",
+        "    # Create parameter and optimizer\n",
+        "    if not isinstance(patch_size, tuple):\n",
+        "        patch_size = (patch_size, patch_size)\n",
+        "    patch = nn.Parameter(torch.zeros(3, patch_size[0], patch_size[1]), requires_grad=True)\n",
+        "    optimizer = torch.optim.SGD([patch], lr=1e-1, momentum=0.8)\n",
+        "    loss_module = nn.CrossEntropyLoss()\n",
+        "    \n",
+        "    # Training loop\n",
+        "    for epoch in tqdm(range(num_epochs)):\n",
+        "        progress_bar = tqdm(train_loader, leave=False)\n",
+        "        for img, _ in progress_bar:\n",
+        "            img = place_patch(img, patch)\n",
+        "            img = img.to(device)\n",
+        "            pred = model(img)\n",
+        "            labels = torch.zeros(img.shape[0], device=pred.device, dtype=torch.long).fill_(target_class)\n",
+        "            loss = loss_module(pred, labels)\n",
+        "            optimizer.zero_grad()\n",
+        "            loss.mean().backward()\n",
+        "            optimizer.step()\n",
+        "            t.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
+        "    \n",
+        "    # Final validation\n",
+        "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
+        "    \n",
+        "    return patch.data, {\"acc\": acc.item(), \"top5\": top5.item()}\n",
+        "```\n",
+        "\n",
+        "<details>"
       ]
     },
     {
@@ -887,7 +955,9 @@
         "id": "I9F5HjI9M8Rg"
       },
       "source": [
-        "Feel free to add any additional classes and/or patch sizes."
+        "Feel free to add any additional classes and/or patch sizes.\n",
+        "\n",
+        "**Note:** If you are generating the patches yourself, it takes ~3 minutes per patch, so you probably one to start by doing only one patch to test. An easy way of doing it is to add `[:1]` to the end of the `classes` and `patch_sizes` lists, which creates a list of only the first element of the original list (e.g. `class_names = [\"...\", ...][:1]`)."
       ]
     },
     {
@@ -1283,7 +1353,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.11.3"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
