Adversarial_Attacks: remove twice the solution + fix progress_bar

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -766,11 +766,14 @@
         "    loss_module = ...\n",
         "    \n",
         "    # Training loop\n",
-        "    for epoch in range(num_epochs):\n",
-        "        for img, _ in train_loader:\n",
+        "    for epoch in tqdm(range(num_epochs)):\n",
+        "        progress_bar = tqdm(train_loader, leave=False)\n",
+        "        for img, _ in progress_bar:\n",
         "            # img, and patch must be on cpu when entering in place_patch\n",
         "            img = place_patch(img, patch)\n",
         "            ...\n",
+        "            # When you define a `loss` variable, it will be displayed in the progress bar\n",
+        "            progress_bar.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
         "    \n",
         "    # Final validation\n",
         "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
@@ -814,7 +817,7 @@
         "            optimizer.zero_grad()\n",
         "            loss.mean().backward()\n",
         "            optimizer.step()\n",
-        "            t.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
+        "            progress_bar.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
         "    \n",
         "    # Final validation\n",
         "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
@@ -822,7 +825,7 @@
         "    return patch.data, {\"acc\": acc.item(), \"top5\": top5.item()}\n",
         "```\n",
         "\n",
-        "<details>"
+        "</details>"
       ]
     },
     {
@@ -832,49 +835,6 @@
         "id": "B7fWDjd6M8Rg"
       },
       "source": [
-        "<details>\n",
-        "<summary>Solution (try to ask TAs instead of looking at it)</summary>\n",
-        "\n",
-        "```python\n",
-        "def patch_attack(model, target_class, patch_size=64, num_epochs=5):\n",
-        "    # Leave a small set of images out to check generalization\n",
-        "    # In most of our experiments, the performance on the hold-out data points\n",
-        "    # was as good as on the training set. Overfitting was little possible due\n",
-        "    # to the small size of the patches.\n",
-        "    train_set, val_set = torch.utils.data.random_split(dataset, [4500, 500])\n",
-        "    train_loader = data.DataLoader(train_set, batch_size=32, shuffle=True, drop_last=True, num_workers=8)\n",
-        "    val_loader = data.DataLoader(val_set, batch_size=32, shuffle=False, drop_last=False, num_workers=4)\n",
-        "    \n",
-        "    # Create parameter and optimizer\n",
-        "    if not isinstance(patch_size, tuple):\n",
-        "        patch_size = (patch_size, patch_size)\n",
-        "    patch = nn.Parameter(torch.zeros(3, patch_size[0], patch_size[1]), requires_grad=True)\n",
-        "    optimizer = torch.optim.SGD([patch], lr=1e-1, momentum=0.8)\n",
-        "    loss_module = nn.CrossEntropyLoss()\n",
-        "    \n",
-        "    # Training loop\n",
-        "    for epoch in tqdm(range(num_epochs)):\n",
-        "        t = tqdm(train_loader, leave=False)\n",
-        "        for img, _ in t:\n",
-        "            img = place_patch(img, patch)\n",
-        "            img = img.to(device)\n",
-        "            pred = model(img)\n",
-        "            labels = torch.zeros(img.shape[0], device=pred.device, dtype=torch.long).fill_(target_class)\n",
-        "            loss = loss_module(pred, labels)\n",
-        "            optimizer.zero_grad()\n",
-        "            loss.mean().backward()\n",
-        "            optimizer.step()\n",
-        "            t.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
-        "    \n",
-        "    # Final validation\n",
-        "    acc, top5 = eval_patch(model, patch, val_loader, target_class)\n",
-        "    \n",
-        "    return patch.data, {\"acc\": acc.item(), \"top5\": top5.item()}\n",
-        "```\n",
-        "\n",
-        "</details>\n",
-        "\n",
-        "\n",
         "To get some experience with what to expect from an adversarial patch attack, we want to train multiple patches for different classes. As the training of a patch can take one or two minutes on a GPU, we have provided a couple of pre-trained patches including their results on the full dataset. The results are saved in a JSON file, which is loaded below."
       ]
     },
