--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -883,7 +883,7 @@
         "            p.grad = None\n",
         "\n",
         "    def step(self) -> None:\n",
-        "        with torch.inference_mode():\n",
+        "        with t.inference_mode():\n",
         "            for i, p in enumerate(self.params):\n",
         "                # weight decay\n",
         "                ...\n",
