Adversarial_Attacks: add hint for device

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -770,8 +770,10 @@
         "        progress_bar = tqdm(train_loader, leave=False)\n",
         "        for img, _ in progress_bar:\n",
         "            # img, and patch must be on cpu when entering in place_patch\n",
-        "            img = place_patch(img, patch)\n",
+        "            img = place_patch(img, patch).to(device)\n",
+        "\n",
         "            ...\n",
+        "\n",
         "            # When you define a `loss` variable, it will be displayed in the progress bar\n",
         "            progress_bar.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
         "    \n",
@@ -809,14 +811,15 @@
         "    for epoch in tqdm(range(num_epochs)):\n",
         "        progress_bar = tqdm(train_loader, leave=False)\n",
         "        for img, _ in progress_bar:\n",
-        "            img = place_patch(img, patch)\n",
-        "            img = img.to(device)\n",
+        "            img = place_patch(img, patch).to(device)\n",
         "            pred = model(img)\n",
         "            labels = torch.zeros(img.shape[0], device=pred.device, dtype=torch.long).fill_(target_class)\n",
         "            loss = loss_module(pred, labels)\n",
         "            optimizer.zero_grad()\n",
         "            loss.mean().backward()\n",
         "            optimizer.step()\n",
+        "            \n",
+        "            # When you define a `loss` variable, it will be displayed in the progress bar\n",
         "            progress_bar.set_description(f\"Epoch {epoch}, Loss: {loss.item():4.2f}\")\n",
         "    \n",
         "    # Final validation\n",
