delete huggingface tuto

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8oPmEHRSeFsV"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tzoTIn3bFHJM"
@@ -28,8 +30,7 @@
         "  - test forward2 by renaming it to forward and run the full notebook to see if your dimensions are compatible\n",
         "  - ignore the dropout layers and device management for now. \n",
         "\n",
-        "**Preliminary readings**:\n",
-        "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
+        "**Preliminary readings**\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
         "- Bonus: Paper: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
         "\n",
@@ -47,6 +48,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -54,6 +56,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "i7Udk-2pHeI3"
@@ -63,6 +66,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yyD_p374HYjj"
@@ -72,6 +76,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XY7intndeFsd"
@@ -300,6 +305,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CVmrc8_XJO1Y"
@@ -309,6 +315,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tT1lEqm7JWkq"
@@ -318,6 +325,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "n4w48WP6eFsi"
@@ -379,6 +387,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1Xr7Pgm2JhEh"
@@ -388,6 +397,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0MaPVId4Jedg"
@@ -397,6 +407,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "wTfkv47zeFsk"
@@ -488,6 +499,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UmJJMA5vJwrU"
@@ -497,6 +509,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dZcIhNDIJss8"
@@ -506,6 +519,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8qW2J1NLeFsn"
@@ -545,6 +559,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Dy7NXVFqJ9kA"
@@ -554,6 +569,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1cPzFJpMKHoi"
@@ -563,6 +579,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "o7E5kcu2eFso"
@@ -630,6 +647,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "v9ECCvrxKW6C"
@@ -723,6 +741,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pHttlNYreFsp"
@@ -732,6 +751,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "t-rpXS0yJB_n"
@@ -741,6 +761,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "r4saVPUZeFsr"
@@ -789,6 +810,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "E1xwRrP_I_6m"
@@ -812,6 +834,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -856,7 +879,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
