add # Hint: You should use the einops.repeat

--- a/workshops/transformer/transformer.ipynb
+++ b/workshops/transformer/transformer.ipynb
@@ -1224,6 +1224,7 @@
         "        nn.init.normal_(self.W_pos, std=self.cfg.init_range)\n",
         "\n",
         "    def forward(self, tokens: Int[Tensor, \"batch position\"]) -> Float[Tensor, \"batch position d_model\"]:\n",
+        "        # Hint: You should use the einops.repeat function to repeat batch-wise the positional embedding.\n",
         "        pass\n",
         "\n",
         "rand_int_test(PosEmbed, [2, 4])\n",
