delete -> batch posn nheads d_head

--- a/workshops/transformer/transformer.ipynb
+++ b/workshops/transformer/transformer.ipynb
@@ -1494,8 +1494,8 @@
         "        self, normalized_resid_pre: Float[Tensor, \"batch posn d_model\"]\n",
         "    ) -> Float[Tensor, \"batch posn d_model\"]:\n",
         "        # Use einops!\n",
-        "        # And to help us understand your code quickly, try to use only the following names for dimensions:\n",
-        "        # batch nheads posn_Q posn_K d_model d_head -> batch posn nheads d_head\n",
+        "        # And to help us understand your code quickly, try to use only the following names with einops:\n",
+        "        # batch nheads posn_Q posn_K d_model d_head\n",
         "\n",
         "        # Calculate query, key and value vectors\n",
         "        q = einops.einsum(\n",
