--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -88,7 +88,6 @@
     "    # What is the shape of obs?\n",
     "    @typechecked # To be typed\n",
     "    def get_policy(obs):\n",
-    "        # Warning: obs sometimes has a batch dimension, sometimes there is no such dimension\n",
     "        logits = logits_net(obs)\n",
     "        # Tip: Categorical is a convenient pytorch object which enable register logits (or a batch of logits)\n",
     "        # and then being able to sample from this pseudo-probability distribution with the \".sample()\" method.\n",
@@ -98,7 +97,7 @@
     "    # What is the shape of obs?\n",
     "    @typechecked # To be typed\n",
     "    def get_action(obs):\n",
-    "        return get_policy(obs).sample().item()\n",
+    "        return get_policy(obs.unsquezze(0)).sample().item()\n",
     "\n",
     "    # make loss function whose gradient, for the right data, is policy gradient\n",
     "    # What is the shape of obs?\n",
