vanilla_policy_gradient: fix typo

--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -97,7 +97,7 @@
     "    # What is the shape of obs?\n",
     "    @typechecked # To be typed\n",
     "    def get_action(obs):\n",
-    "        return get_policy(obs.unsquezze(0)).sample().item()\n",
+    "        return get_policy(obs.unsqueeze(0)).sample().item()\n",
     "\n",
     "    # make loss function whose gradient, for the right data, is policy gradient\n",
     "    # What is the shape of obs?\n",
