grad_cam: start modifying

--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -45,19 +45,14 @@
       ],
       "source": [
         "import torch\n",
+        "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import numpy as np\n",
         "\n",
         "import torchvision.transforms as transforms\n",
         "from PIL import Image\n",
         "\n",
-        "import warnings\n",
         "import matplotlib.pyplot as plt\n",
-        "warnings.filterwarnings('ignore')\n",
-        "\n",
-        "# Additional import\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "import cv2\n",
         "\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
       ]
@@ -149,7 +144,7 @@
         "%cd /content/gradCam\n",
         "from load_model import load_model\n",
         "vqa_resnet = load_model()\n",
-        "vqa_resnet.train()"
+        "vqa_resnet.train()  # TODO: ???"
       ]
     },
     {
@@ -677,7 +672,7 @@
         }
       ],
       "source": [
-        "print(vqa_resnet) # for more information "
+        "print(vqa_resnet)  # for more information "
       ]
     },
     {
@@ -687,7 +682,6 @@
       "outputs": [],
       "source": [
         "# Dropout of 0.5 is too big, for deterministic behavior, remove the dropout\n",
-        "import torch.nn as nn\n",
         "\n",
         "# Loop through all the modules in the model\n",
         "for module in vqa_resnet.modules():\n",
