grad cam: more cleanup

--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "* **Objective**: Convolutional Neural Networks are widely used on computer vision. It is powerful for processing grid-like data. However we hardly know how and why it works, due to the lack of decomposability into individually intuitive components. In this assignment, we will introduce the Grad-CAM which visualizes the heatmap of input images by highlighting the important region for visual question answering(VQA) task.\n",
     "\n",
-    "* NB: if `PIL` is not installed, try `conda install pillow`."
+    "* NB: if `PIL` is not installed, try `pip install pillow`."
    ]
   },
   {
@@ -204,14 +204,12 @@
    },
    "outputs": [],
    "source": [
-    "def encode_question(question: str) -> Int[Tensor, \"nb_words\"]:\n",
-    "    \"\"\"Turn a question into a vector of tokens and a question length.\"\"\"\n",
-    "    question_arr = question.lower().split()\n",
-    "    vec = torch.zeros(len(question_arr), device=device).long()\n",
-    "    for i, token in enumerate(question_arr):\n",
-    "        index = question_word_to_index.get(token, 0)\n",
-    "        vec[i] = index\n",
-    "    return vec"
+    "def tokenize(question: str) -> Int[Tensor, \"nb_words\"]:\n",
+    "    \"\"\"Turn a question into a vector of tokens.\"\"\"\n",
+    "    # For this model, tokens are lowercase words, so we split on whitespace\n",
+    "    words = question.lower().split()\n",
+    "    # Then map each word to its index in the dictionary\n",
+    "    return torch.tensor([question_word_to_index[word] for word in words], device=device)"
    ]
   },
   {
@@ -226,14 +224,14 @@
     "    \"\"\"\n",
     "    Load the image at `dir_path` and process it to be a suitable input for vqa_resnet.\n",
     "    \"\"\"\n",
-    "    q = encode_question(question)\n",
+    "    tokens = tokenize(question)\n",
+    "    \n",
     "    img = Image.open(dir_path).convert(\"RGB\")\n",
-    "    transform = get_transform()\n",
-    "    img_transformed = transform(img)\n",
-    "    img_features = img_transformed.unsqueeze(0).to(device)\n",
-    "    q_len = torch.tensor(q.shape, device=device)\n",
+    "    img_transformed = get_transform()(img).unsqueeze(0).to(device)\n",
+    "    \n",
+    "    q_len = torch.tensor(tokens.shape, device=device)\n",
     "\n",
-    "    inputs = (img_features, q.unsqueeze(0), q_len.unsqueeze(0))\n",
+    "    inputs = (img_transformed, tokens.unsqueeze(0), q_len.unsqueeze(0))\n",
     "    return inputs"
    ]
   },
@@ -245,16 +243,16 @@
    },
    "outputs": [],
    "source": [
-    "def check_answers(img_path: str, question: str):\n",
-    "    # Check the answers of the model\n",
+    "def check_answers(img_path: str, question: str, topk=10):\n",
+    "    \"\"\"Show the top `topk` answers of the model for a given question.\"\"\"\n",
     "    inputs = preprocess(img_path, question)\n",
     "    logits = vqa_resnet(*inputs)\n",
     "    probas = F.softmax(logits.squeeze(), dim=0)\n",
-    "    values, tokens_indices = torch.topk(probas, k=10)\n",
+    "    values, tokens_indices = torch.topk(probas, k=topk)\n",
     "\n",
-    "    print(\"Output probablities\")\n",
+    "    print(\"Output probablities:\")\n",
     "    for token, value in zip(tokens_indices, values):\n",
-    "        print(index_to_answer_word[token], f\"-> {value:.2%}\")"
+    "        print(f\"- {index_to_answer_word[token]!r: >10} \\t-> {value:.2%}\")"
    ]
   },
   {
@@ -263,7 +261,10 @@
     "id": "b0hLEtdEzzux"
    },
    "source": [
-    "We provide you two pictures and some question-answers."
+    "We provide you two pictures and questions. Is the model doing great?\n",
+    "If not, make a hypothesis for why it makes an eroneous prediction. What feature in the image did it pick up?\n",
+    "\n",
+    "This is the question that GradCam tries to answer."
    ]
   },
   {
@@ -283,15 +284,6 @@
     "dog_cat_question = \"What animal\"\n",
     "check_answers(dog_cat_path, dog_cat_question)\n",
     "Image.open(dog_cat_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "nu0iUUecGDIE"
-   },
-   "source": [
-    "Since we deactivated"
    ]
   },
   {
@@ -333,8 +325,9 @@
     "have saved the handle in the first place. \n",
     "- Errors: if your hook function throws an error, it you will need to remove it, since they are not removed automatically. The best way to do this is to always wrap calls with hooks in a `try`/`finally` block, and remove the hook in the `finally` block. This way, you are garanteed that the hook will be removed after one pass through the model.\n",
     "- If you mess up, you can always reload the model, the hooks will be gone.\n",
+    "- They encorage the use of `global` state, which can lead to the usual drawbacks of global state. \n",
     "\n",
-    "We do our interventions in the second to last convolution of the resnet, defined bellow.\n",
+    "We do our interventions on the last convolution of the resnet, defined below.\n",
     "\n",
     "You may need to read the hook tuto https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks"
    ]
@@ -347,7 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "# Second to last convolution\n",
+    "# The last convolution\n",
     "module_to_hook = vqa_resnet.resnet_layer4.r_model.layer4[2].conv3"
    ]
   },
@@ -618,7 +611,7 @@
     "    mean_gradient = einops.reduce(...)\n",
     "    grad_cam = einops.einsum(...)\n",
     "\n",
-    "    grad_cam = nn.Relu()(grad_cam)\n",
+    "    grad_cam = grad_cam.clip(min=0)\n",
     "    grad_cam = grad_cam.cpu().detach().numpy()\n",
     "\n",
     "    cam = cv2.resize(grad_cam, (224, 224))\n",
@@ -744,7 +737,7 @@
     "id": "3stVrMRt-y_u"
    },
    "source": [
-    "What the interpretation? \n",
+    "Whats the interpretation of those plots?\n",
     "\n",
     "PS: don't try too much to interpret the cat.\n",
     "\n",
