--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -477,8 +477,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def flip_output(module, inputs, output):\n",
     "    # You need to modify output *in place*\n",
     "    ...\n",
@@ -510,7 +508,8 @@
     "\n",
     "There is no code to complete in this exercise, but you need to understand what is going on.\n",
     "- What is `global`?\n",
-    "- Why do we use it, and what would happen if we did not?"
+    "- Why do we use it, and what would happen if we did not?\n",
+    "- What are the drawbacks of using `global` variables?"
    ]
   },
   {
@@ -583,49 +582,54 @@
    "outputs": [],
    "source": [
     "def grad_cam(\n",
-    "    dir_path=\"dog_cat.png\", Question=\"What animal\", answer=\"dog\", module_to_hook=module_to_hook\n",
+    "    img_path=\"dog_cat.png\", question=\"What animal\", answer=\"dog\", module_to_hook=module_to_hook\n",
     "):\n",
     "    # Make a figure with 3 subplots\n",
     "    fig, axs = plt.subplots(1, 3, figsize=(15, 6))\n",
     "    # Plot the original image on the left\n",
-    "    img = Image.open(dir_path)\n",
+    "    img = Image.open(img_path)\n",
     "    axs[0].imshow(img)\n",
     "    axs[0].set_title(\"Original image\")\n",
     "\n",
-    "    inputs = preprocess(dir_path, Question)\n",
-    "    vqa_resnet.zero_grad()\n",
+    "    inputs = preprocess(img_path, question)\n",
     "\n",
+    "    # Add the hooks to store the feature map and its gradient \n",
+    "    # in the global variables saved_output and saved_output_grad.\n",
     "    forward_handle = module_to_hook.register_forward_hook(forward_hook)\n",
     "    backward_handle = module_to_hook.register_backward_hook(backward_hook)\n",
     "\n",
     "    try:\n",
-    "        ans = vqa_resnet(*inputs)\n",
+    "        # Make sure there are no gradients\n",
+    "        vqa_resnet.zero_grad()\n",
+    "        # Compute the predictions of the model\n",
+    "        logits = vqa_resnet(*inputs)\n",
     "\n",
-    "        # Backpropagating just on the dog or the given answer\n",
-    "        only_class_ans = ans[0, answer_word_to_index[answer]]\n",
-    "        only_class_ans.backward()\n",
+    "        # Backpropagate just on the logit of the given answer\n",
+    "        answer_logit = logits[0, answer_word_to_index[answer]]\n",
+    "        answer_logit.backward()\n",
     "    finally:\n",
     "        forward_handle.remove()\n",
     "        backward_handle.remove()\n",
     "\n",
+    "    # TODO: compute the gradient camera (equation 1 and 2 of the paper)\n",
     "    mean_gradient = einops.reduce(...)\n",
     "    grad_cam = einops.einsum(...)\n",
     "\n",
     "    grad_cam = grad_cam.clip(min=0)\n",
+    "    \n",
+    "    # Upscale, normalize and convert to RGB\n",
     "    grad_cam = grad_cam.cpu().detach().numpy()\n",
-    "\n",
     "    cam = cv2.resize(grad_cam, (224, 224))\n",
-    "    cam = np.maximum(cam, 0)\n",
     "    cam = (cam - np.min(cam)) / (np.max(cam) - np.min(cam))  # Normalize between 0-1\n",
     "    cam = np.uint8(cam * 255)  # Scale between 0-255 to visualize\n",
     "\n",
-    "    # Heatmap of activation map\n",
+    "    # Heatmap of activation map. Plot in the center.\n",
     "    activation_heatmap = cv2.applyColorMap(cam, cv2.COLORMAP_HSV)\n",
     "    axs[1].imshow(activation_heatmap)\n",
     "    axs[1].set_title(\"Heatmap of activation map\")\n",
     "\n",
-    "    # Heatmap on picture\n",
-    "    img = cv2.imread(dir_path)\n",
+    "    # Overlay heatmap and picture. Plot on the right.\n",
+    "    img = cv2.imread(img_path)\n",
     "    org_img = cv2.resize(img, (224, 224))\n",
     "    img_with_heatmap = np.float32(activation_heatmap) + np.float32(org_img)\n",
     "    img_with_heatmap *= 0.99 / np.max(img_with_heatmap)\n",
@@ -664,7 +668,7 @@
    },
    "outputs": [],
    "source": [
-    "grad_cam(dir_path=\"dog_cat.png\", Question=\"What animal\", answer=\"dog\")"
+    "grad_cam(img_path=\"dog_cat.png\", question=\"What animal\", answer=\"dog\")"
    ]
   },
   {
@@ -680,7 +684,7 @@
    },
    "outputs": [],
    "source": [
-    "grad_cam(dir_path=\"dog_cat.png\", Question=\"What animal\", answer=\"cat\")"
+    "grad_cam(img_path=\"dog_cat.png\", question=\"What animal\", answer=\"cat\")"
    ]
   },
   {
@@ -696,7 +700,7 @@
    },
    "outputs": [],
    "source": [
-    "grad_cam(dir_path=\"dog_cat.png\", Question=\"What animal\", answer=\"giraffe\")"
+    "grad_cam(img_path=\"dog_cat.png\", question=\"What animal\", answer=\"giraffe\")"
    ]
   },
   {
@@ -712,7 +716,7 @@
    },
    "outputs": [],
    "source": [
-    "grad_cam(dir_path=\"hydrant.png\", Question=\"What color\", answer=\"green\")"
+    "grad_cam(img_path=\"hydrant.png\", question=\"What color\", answer=\"green\")"
    ]
   },
   {
@@ -728,7 +732,7 @@
    },
    "outputs": [],
    "source": [
-    "grad_cam(dir_path=\"hydrant.png\", Question=\"What color\", answer=\"yellow\")"
+    "grad_cam(img_path=\"hydrant.png\", question=\"What color\", answer=\"yellow\")"
    ]
   },
   {
@@ -739,7 +743,7 @@
    "source": [
     "Whats the interpretation of those plots?\n",
     "\n",
-    "PS: don't try too much to interpret the cat.\n",
+    "Note: don't try too much to interpret the cat.\n",
     "\n",
     "\n",
     "## Bonus: Safari - hunting the giraffe\n",
