probes: small clarification

--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -491,8 +491,8 @@
         "\n",
         "Look at this youtube video to introduce you to probing: https://www.youtube.com/watch?v=HJn-OTNLnoE\n",
         "\n",
-        "We will use the fetch_20newsgroups dataset, and we will classify the news.\n",
-        "We will try to implement a small probe. Analyse each layer of GPT-2. Which layer contains most of the information we are insterested with?\n",
+        "We will use the fetch_20newsgroups dataset, and we will classify the news according to which journal they come from.\n",
+        "We will try to implement a small probe and analyse each layer of GPT-2. Which layer contains most of the information we are insterested with?\n",
         "\n",
         "Questions: \n",
         "- What is your strategy to use the internal states of gpt-2 as features for classification?\n",
