--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -66,7 +66,7 @@
         }
       ],
       "source": [
-        "!pip install transformers transformer_utils jaxtyping -q"
+        "!pip install transformers transformer_utils jaxtyping einops typeguard=2.13 -q"
       ]
     },
     {
@@ -870,7 +870,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.11.5"
     },
     "orig_nbformat": 4
   },
